# document-parser

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/apps/: config.py  logger.py
src/middlewares/: authenticate_request.py
src/models/: __init__.py  table_detection.py  table_detection_yolox.py
src/services/: __init__.py  table_detection.py
